.opsera-health-0223/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-0223
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: health-0223-dev.agent.opsera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: health-0223
                port:
                  number: 80
